# nbdev-card

./: README.md  pyproject.toml  settings.ini
_proc/: index.ipynb
nbdev_card/: _modidx.py
nbs/: index.ipynb  nbdev.yml
