[tool.poetry]
name = "nbdev-card"
version = "0.1.0"
description = ""
authors = ["Mi Lu <mi.lu@outlook.com>"]
readme = "README.md"
packages = [{include = "nbdev_card"}]

[tool.poetry.dependencies]
python = "^3.11"
notebook = "^6.5.2"
nbdev = "^2.3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
